# quantecon-book-networks

./: .gitignore  LICENSE  README.md  pyproject.toml
quantecon_book_networks/: __init__.py  configure.py  data-markov-chains-convert.ipynb  data.py  input_output.py  plotting.py
quantecon_book_networks/data/: README.md
quantecon_book_networks/data/crude_oil/: data.csv
quantecon_book_networks/data/crude_oil_sitcr2_3330_yr2021/: data.csv
quantecon_book_networks/data/csv_files/: adjacency_matrix.csv  adjacency_matrix_31-12-2022.csv  make_114_aus_20-21.csv  make_15.csv  make_15_2021.csv  make_71.csv  make_71_2021.csv  use_114_aus.csv  use_114_aus_20-21.csv  use_15.csv  use_71_2021.csv
quantecon_book_networks/data/markov_chains_networks/: wb_countries.csv  wb_gdppc.csv  wb_gdppc_wld.csv
