[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "quantecon_book_networks"
authors = [{name = "QuantEcon Developers", email = "contact@quantecon.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    'numpy',
    'scipy',
    'pandas',
    'matplotlib',
    'pandas-datareader',
    'networkx'
]

[project.urls]
Home = "https://github.com/quantecon/book-networks"

[tool.flit.sdist]
include = ["quantecon_book_networks/"]
